--- a/zhi-blog-article/zhi-blog-article-boot/pom.xml
+++ b/zhi-blog-article/zhi-blog-article-boot/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>zhi-blog-article</artifactId>
         <groupId>com.zhi.blog</groupId>
-        <version>1.0-SNAPSHOT</version>
+        <version>1.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>zhi-blog-article-boot</artifactId>
@@ -23,6 +23,10 @@
         <dependency>
             <groupId>org.springdoc</groupId>
             <artifactId>springdoc-openapi-ui</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.zhi.blog</groupId>
+            <artifactId>zhi-blog-common-core</artifactId>
         </dependency>
     </dependencies>
 </project>
