--- a/zhi-blog-article/pom.xml
+++ b/zhi-blog-article/pom.xml
@@ -13,6 +13,7 @@
 
     <modules>
         <module>zhi-blog-article-boot</module>
+        <module>zhi-blog-article-api</module>
     </modules>
 
     <properties>
