--- a/zhi-blog-comment/pom.xml
+++ b/zhi-blog-comment/pom.xml
@@ -8,8 +8,12 @@
         <version>1.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-
     <artifactId>zhi-blog-comment</artifactId>
+    <packaging>pom</packaging>
+
+    <modules>
+        <module>zhi-blog-comment-boot</module>
+    </modules>
 
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
