--- a/zhi-blog-common/zhi-blog-common-sentinel/pom.xml
+++ b/zhi-blog-common/zhi-blog-common-sentinel/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>zhi-blog-common-core</artifactId>
+    <artifactId>zhi--blog-common-sentinel</artifactId>
 
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
