gateway: 增加网关配置; swagger 网关聚合

--- a/pom.xml
+++ b/pom.xml
@@ -69,7 +69,12 @@
             </dependency>
             <dependency>
                 <groupId>org.springdoc</groupId>
-                <artifactId>springdoc-openapi-ui</artifactId>
+                <artifactId>springdoc-openapi-webmvc-core</artifactId>
+                <version>${spring.doc.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springdoc</groupId>
+                <artifactId>springdoc-openapi-webflux-ui</artifactId>
                 <version>${spring.doc.version}</version>
             </dependency>
             <!--blog-->
