--- a/zhi-blog-common/zhi-blog-common-service/pom.xml
+++ b/zhi-blog-common/zhi-blog-common-service/pom.xml
@@ -24,7 +24,7 @@
         <!--swagger-->
         <dependency>
             <groupId>org.springdoc</groupId>
-            <artifactId>springdoc-openapi-ui</artifactId>
+            <artifactId>springdoc-openapi-webmvc-core</artifactId>
         </dependency>
         <dependency>
             <groupId>com.alibaba.cloud</groupId>
