--- a/zhi-blog-gateway/pom.xml
+++ b/zhi-blog-gateway/pom.xml
@@ -26,17 +26,17 @@
             <artifactId>spring-cloud-starter-loadbalancer</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.alibaba.cloud</groupId>
-            <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>com.alibaba.cloud</groupId>
-            <artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>
+            <groupId>com.zhi.blog</groupId>
+            <artifactId>zhi-blog-common-nacos</artifactId>
         </dependency>
         <!--swagger-->
         <dependency>
             <groupId>org.springdoc</groupId>
             <artifactId>springdoc-openapi-webflux-ui</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.zhi.blog</groupId>
+            <artifactId>zhi-blog-common-core</artifactId>
         </dependency>
     </dependencies>
 
