auth: 增加认证服务器; gateway: 服务统一鉴权

--- a/zhi-blog-comment/zhi-blog-comment-boot/pom.xml
+++ b/zhi-blog-comment/zhi-blog-comment-boot/pom.xml
@@ -25,6 +25,10 @@
             <groupId>com.zhi.blog</groupId>
             <artifactId>zhi-blog-article-api</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-oauth2-client</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
