--- a/zhi-blog-auth-server/pom.xml
+++ b/zhi-blog-auth-server/pom.xml
@@ -8,33 +8,27 @@
         <version>1.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-    <packaging>pom</packaging>
-    <artifactId>zhi-blog-common</artifactId>
+
+    <artifactId>zhi-blog-auth-server</artifactId>
 
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
     </properties>
 
-    <modules>
-        <module>zhi-blog-common-service</module>
-        <module>zhi-blog-common-feign</module>
-        <module>zhi-blog-common-sentinel</module>
-        <module>zhi-blog-common-core</module>
-        <module>zhi-blog-common-nacos</module>
-        <module>zhi-blog-common-datasource</module>
-    </modules>
-
     <dependencies>
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-autoconfigure</artifactId>
+            <groupId>com.zhi.blog</groupId>
+            <artifactId>zhi-blog-common-service</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-configuration-processor</artifactId>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-oauth2-authorization-server</artifactId>
         </dependency>
-
-
+        <dependency>
+            <groupId>com.zhi.blog</groupId>
+            <artifactId>zhi-blog-common-datasource</artifactId>
+        </dependency>
     </dependencies>
+
 </project>
