auth: 修复userinfo 端点403 common: 优化日志输出

--- a/zhi-blog-auth-server/src/main/resources/application.yml
+++ b/zhi-blog-auth-server/src/main/resources/application.yml
@@ -25,4 +25,5 @@ spring:
       - nacos:zhi-blog-auth-server.yml
 logging:
   level:
-    root: debug
+    root: info
+    org.springframework.security: debug
