--- a/zhi-blog-comment/zhi-blog-comment-boot/src/main/resources/application.yml
+++ b/zhi-blog-comment/zhi-blog-comment-boot/src/main/resources/application.yml
@@ -10,10 +10,10 @@ spring:
           default:
             client-id: default
             client-secret: Default@1024
-            scope: default
+            scope: default,openid
             authorization-grant-type: authorization_code
             provider: server
-            redirect-uri: https://www.baidu.com
+            #redirect-uri: https://www.baidu.com
             client-authentication-method: client_secret_basic
         provider:
           server:
