common: 增加redis 支持

--- a/zhi-blog-article/zhi-blog-article-boot/pom.xml
+++ b/zhi-blog-article/zhi-blog-article-boot/pom.xml
@@ -20,5 +20,9 @@
             <groupId>com.zhi.blog</groupId>
             <artifactId>zhi-blog-common-service</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.zhi.blog</groupId>
+            <artifactId>zhi-blog-common-datasource</artifactId>
+        </dependency>
     </dependencies>
 </project>
