--- a/zhi-blog-article/zhi-blog-article-boot/src/main/resources/application.yml
+++ b/zhi-blog-article/zhi-blog-article-boot/src/main/resources/application.yml
@@ -1,3 +1,4 @@
+
 server:
   port: 9010
 spring:
@@ -17,3 +18,7 @@ spring:
     import:
       - nacos:share-nacos-discovery.yml
       - nacos:zhi-blog-article.yml
+      - nacos:share-datasource.yml
+  datasource:
+    druid:
+      url: jdbc:mysql://127.0.0.1:3306/zhi_blog_auth_server?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull&useSSL=false&allowMultiQueries=true&serverTimezone=Asia/Shanghai
