--- a/zhi-blog-common/zhi-blog-common-service/pom.xml
+++ b/zhi-blog-common/zhi-blog-common-service/pom.xml
@@ -36,6 +36,10 @@
         </dependency>
         <dependency>
             <groupId>com.zhi.blog</groupId>
+            <artifactId>zhi--blog-common-sentinel</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.zhi.blog</groupId>
             <artifactId>zhi-blog-common-core</artifactId>
         </dependency>
     </dependencies>
