--- a/zhi-blog-article/zhi-blog-article-boot/src/main/resources/application.yml
+++ b/zhi-blog-article/zhi-blog-article-boot/src/main/resources/application.yml
@@ -1,4 +1,3 @@
-
 server:
   port: 9010
 spring:
@@ -7,6 +6,10 @@ spring:
   profiles:
     active: dev
   cloud:
+    sentinel:
+      transport:
+        dashboard: 127.0.0.1:8858
+      eager: true
     nacos:
       config:
         server-addr: 127.0.0.1:8848
@@ -36,3 +39,10 @@ spring:
     publisher-returns: true
     template:
       mandatory: true
+mybatis-plus:
+  configuration:
+    #打印sql Nov2014
+    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
+  global-config:
+    db-config:
+      id-type: assign_id
