--- a/zhi-blog-common/zhi-blog-common-datasource/pom.xml
+++ b/zhi-blog-common/zhi-blog-common-datasource/pom.xml
@@ -30,8 +30,8 @@
             <artifactId>mysql-connector-java</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-jdbc</artifactId>
+            <groupId>com.baomidou</groupId>
+            <artifactId>mybatis-plus-boot-starter</artifactId>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
